[package]
name = "node_client"
version = "0.1.0"
authors = ["nmbr7 <suhailr7@ymail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.10"
rsless = { git = "https://github.com/nmbr7/rsless" }
