[package]
name = "cbnbcli"
version = "0.1.0"
authors = ["nmbr7 <suhailr7@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = "2.33.0"
walkdir = "*"
